WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56782
REGRESSION (
r81269
): WebKit2 gets into an infinite recursion after an unhandled command key
https://bugs.webkit.org/show_bug.cgi?id=56782
Summary
REGRESSION (r81269): WebKit2 gets into an infinite recursion after an unhandl...
Alexey Proskuryakov
Reported
2011-03-21 16:55:02 PDT
Steps to reproduce: 1. Open a new WebKit2 window. 2. Click in content to focus. 3. Press Cmd+[, or Esc, or some other command key. Results: both web and UI process taking a lot of CPU time, bouncing the key event back and forth. <
rdar://problem/9151993
>
Attachments
proposed fix
(5.53 KB, patch)
2011-03-21 17:05 PDT
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-03-21 17:05:49 PDT
Created
attachment 86390
[details]
proposed fix I can't say that I really deeply understand this code, but the fix seems to be straightforward.
Darin Adler
Comment 2
2011-03-21 17:08:06 PDT
Comment on
attachment 86390
[details]
proposed fix View in context:
https://bugs.webkit.org/attachment.cgi?id=86390&action=review
> Source/WebKit2/UIProcess/API/mac/WKView.mm:1739 > +- (void)_resendEvent:(NSEvent *)event
I like the name _resetKeyDownEvent slightly better.
Alexey Proskuryakov
Comment 3
2011-03-21 17:12:31 PDT
Committed <
http://trac.webkit.org/changeset/81622
>.
WebKit Review Bot
Comment 4
2011-03-21 18:06:14 PDT
http://trac.webkit.org/changeset/81622
might have broken Qt Linux Release The following tests are not passing: css2.1/t09-c5526c-display-00-e.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug