        Reviewed by Darin Adler.

REGRESSION (r81269): WebKit2 gets into an infinite recursion after an unhandled command key
        https://bugs.webkit.org/show_bug.cgi?id=56782
        <rdar://problem/9151993>

        * UIProcess/API/mac/PageClientImpl.mm: (WebKit::PageClientImpl::doneWithKeyEvent):
        Factored out code for resending an event and moved it to WKView.

        * UIProcess/API/mac/WKView.mm:
        (-[WKView performKeyEquivalent:]): Don't zero out _keyDownEventBeingResent, it's easier
        to just do that in _resendKeyDownEvent:.
        (-[WKView keyDown:]): Ditto.
        (-[WKView _resendKeyDownEvent:]): Moved from PageClientImpl.mm. Added an assertion that we
        are not already resending an event - it would be too confusing if we ever had to do that,
        but looks like this never happens.

        * UIProcess/API/mac/WKViewInternal.h: Exposed _resendKeyDownEvent.



Canonical link: https://commits.webkit.org/71461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81622 268f45cc-cd09-0410-ab3c-d52691b4dbfc